@@ -36,6 +36,7 @@
              - support all IIterativeModel recommenders, not just the ones
                derived from MatrixFactorization
              - --compute-fit now works in all cases
+             - evaluate on simple split (given split ratio)
           - write out predictions every N iterations with --prediction-file=F
             and --find-iter=N (bug reported by Alejandro Bellogin)
           - write loading time to STDERR, not STDOUT
